Better validations, better performance and fix some stuff.